# lycoris

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.cn.md  README.md
.github/workflows/: github_release.yml  quality_check.yml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: node.proto
crates/api/src/: lib.rs  tls.rs
crates/apikit/: Cargo.toml
crates/apikit/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs
crates/clients/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: client.rs  daemon.rs  error.rs  lib.rs  node_info.rs  paths.rs  toml_file.rs  validation.rs
crates/core/: Cargo.toml
crates/core/src/: cluster_key.rs  fs.rs  lib.rs  membership.rs  node_info.rs  paths.rs  resource_scope.rs  selector.rs  time.rs  validation.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/examples/: cluster_client.rs
crates/daemon/src/: cluster_sync.rs  gossip.rs  lib.rs  llm.rs  main.rs  resource_sync.rs  runtime.rs  selector.rs  storage.rs  transport.rs
crates/daemon/src/api/: mod.rs  server.rs
crates/daemon/src/extension/: hooks.rs  mod.rs
crates/daemon/src/membership/: convert.rs  crdt.rs  detector.rs  merkle.rs  mod.rs  service.rs  swim.rs
crates/daemon/src/node/: info.rs  mod.rs  registry.rs  state.rs
crates/daemon/src/resource/: convert.rs  error.rs  mapper.rs  mod.rs
crates/daemon/src/rpc/: cluster.rs  extension.rs  interceptor.rs  mod.rs  resource.rs  server.rs
crates/daemon/src/sync/: antientropy.rs  gossip.rs  mod.rs  peers.rs  resource.rs  swim.rs
crates/daemon/src/tls/: generate.rs  mod.rs
crates/daemon/tests/: extension_wasm.rs  integration.rs
crates/daemon/tests/e2e/: Containerfile  run.sh
crates/extension/: Cargo.toml
crates/extension-guest/: Cargo.toml
crates/extension-guest/src/: host.rs  lib.rs
crates/extension/src/: engine.rs  error.rs  http.rs  lib.rs  llm.rs  lua.rs  manifest.rs  package.rs  wasm.rs
crates/extguest/: Cargo.toml
crates/extguest/src/: lib.rs  shim.rs
crates/membership/: Cargo.toml
crates/membership/src/: lib.rs  membership.rs  merkle.rs  register.rs  swim.rs  sync.rs
crates/messenger/: Cargo.toml
crates/plugin/: Cargo.toml
crates/plugin/src/: engine.rs  error.rs  lib.rs  lua.rs  manifest.rs  package.rs  wasm.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: node.proto
crates/proto/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/shell/: Cargo.toml  README.md
crates/shell/src/: cli.rs  config.rs  error.rs  main.rs
crates/shell/src/commands/: cluster.rs  daemon.rs  mod.rs  setup.rs
crates/shell/src/commands/cluster/: ext.rs  mod.rs  parse.rs  render.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: bytes.rs  error.rs  lib.rs  resource_id.rs  table.rs  versioned.rs
crates/storage/src/agent/: mod.rs
crates/storage/src/cluster/: mod.rs
crates/storage/src/extension/: mod.rs
crates/storage/src/node/: cluster.rs  info.rs  local.rs  meta.rs  mod.rs  peers.rs  registry.rs
crates/storage/src/plugin/: mod.rs
crates/storage/src/workspace/: mod.rs  rule.rs  skill.rs  store.rs  vcs.rs  versioned.rs
crates/tls/: Cargo.toml
crates/tls/src/: generate.rs  lib.rs
crates/web/: Cargo.toml
crates/workers/: Cargo.toml
deploy/: build-release.sh
deploy/systemd/: README.md  install.sh  lycoris-server.service  lycoris-server.user.service  lycoris.service  lycoris.user.service
docs/: agent-architecture-research.md  agent-papers-survey.md  lycoris-architecture-plan.md  lycoris-knowledge-base-and-retrieval.md  lycoris-memory-and-skill-tree.md  lycoris-protocol-and-storage.md  lycoris-shell-worktree-lifecycle.md
docs/design/: extension-system.md  llm-provider.md  plugin-system.md
e2e/: Dockerfile  Dockerfile.shell-test  docker-compose.yml  gen-certs.sh  gen-configs.sh  openai-mock.conf  partition-test.sh  run.sh  shell-test.sh
e2e/fixtures/: echo.lua  echo.pkg.toml  openai.pkg.toml
extensions/openai/: Cargo.toml  README.md
extensions/openai/src/: lib.rs  provider.rs
extensions/openai/tests/: wasm_e2e.rs
testkit/: Cargo.toml
testkit/src/: certs.rs  http.rs  lib.rs  wasm.rs
