[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "..."
edition      = "2024"
homepage     = "https://lycoris.woooo.tech"
license      = "GPL-2.0-or-later"
readme       = "README.md"
repository   = "https://github.com/Reverier-Xu/lycoris"
rust-version = "1.96"
version      = "0.1.0"

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = "z"
strip         = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
arrow-array   = "58.0"
arrow-schema  = "58.0"
async-trait   = "0.1"
clap          = "4.6"
directories   = "6.0"
futures-util  = "0.3"
jiff          = "0.2"
is-root       = "0.1"
lancedb       = "0.31"
lycoris-api     = { path = "crates/api" }
lycoris-config  = { path = "crates/config" }
lycoris-storage = { path = "crates/storage" }
blake3        = "1.8"
owo-colors    = "4.3"
postcard      = { version = "1.0", features = ["use-std"] }
prost         = "0.13"
rcgen         = "0.13"
redb          = "3.0"
rustls        = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
serde         = { version = "1.0", features = ["derive"] }
tempfile      = "3"
thiserror     = "2.0"
tokio         = { version = "1.52", features = ["full"] }
tokio-rustls  = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
toml          = "0.8"
tonic         = { version = "0.13", features = ["tls-ring"] }
tonic-build   = "0.13"
tracing       = "0.1"
tracing-subscriber = "0.3"
