[workspace]
members  = ["crates/*"]
resolver = "3"

[workspace.package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "..."
edition      = "2024"
homepage     = "https://lycoris.woooo.tech"
license      = "GPL-2.0-or-later"
readme       = "README.md"
repository   = "https://github.com/Reverier-Xu/lycoris"
rust-version = "1.96"
version      = "0.1.0"

[profile.dev]
split-debuginfo = "unpacked"
codegen-units = 16

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = "z"
strip         = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
arrow-array   = "58.0"
arrow-schema  = "58.0"
async-trait   = "0.1"
clap          = "4.6"
directories   = "6.0"
futures-util  = "0.3"
hex           = "0.4"
is-root       = "0.1"
lancedb       = "0.31"
lycoris-client    = { path = "crates/client" }
lycoris-config    = { path = "crates/config" }
lycoris-core      = { path = "crates/core" }
lycoris-daemon    = { path = "crates/daemon" }
lycoris-membership = { path = "crates/membership" }
lycoris-proto     = { path = "crates/proto" }
lycoris-storage   = { path = "crates/storage" }
lycoris-tls       = { path = "crates/tls" }
blake3        = "1.8"
owo-colors    = "4.3"
postcard      = { version = "1.0", features = ["use-std"] }
prost         = "0.13"
rcgen         = { version = "0.13", features = ["x509-parser"] }
ring          = "0.17"
redb          = "3.0"
rustls        = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
semver        = "1.0"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
tempfile      = "3"
thiserror     = "2.0"
time          = "0.3"
tokio         = { version = "1.52", features = ["full"] }
toml          = "0.8"
tonic         = { version = "0.13", features = ["tls-ring"] }
tonic-build   = "0.13"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
