[workspace]
members  = ["crates/*", "extensions/*"]
resolver = "3"

[workspace.package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "..."
edition      = "2024"
homepage     = "https://lycoris.woooo.tech"
license      = "GPL-2.0-or-later"
readme       = "README.md"
repository   = "https://github.com/Reverier-Xu/lycoris"
rust-version = "1.96"
version      = "0.2.0"

[profile.dev]
codegen-units   = 16
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = "z"
strip         = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
async-trait        = "0.1"
blake3             = "1.8"
clap               = "4.6"
directories        = "6.0"
futures-util       = "0.3"
hex                = "0.4"
is-root            = "0.1"
lancedb            = "0.31"
owo-colors         = "4.3"
postcard           = { version = "1.1", features = ["use-std"] }
prost              = "0.14"
rcgen              = { version = "0.14", features = ["x509-parser"] }
redb               = "4.1"
ring               = "0.17"
semver             = "1.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
tempfile           = "3"
thiserror          = "2.0"
time               = "0.3"
tokio              = { version = "1.53", features = ["full"] }
toml               = "1.1"
tonic              = { version = "0.14", features = ["tls-ring"] }
tonic-prost        = "0.14"
tonic-prost-build  = "0.14"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime           = "46"
wat                = "1"
webpki-roots       = "1"
x509-parser        = "0.18"

mlua = { version = "0.12", features = [
  "lua54",
  "vendored",
  "serialize",
  "send",
] }
reqwest = { version = "0.13", default-features = false, features = [
  "rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }

lycoris-client     = { path = "crates/client" }
lycoris-config     = { path = "crates/config" }
lycoris-core       = { path = "crates/core" }
lycoris-daemon     = { path = "crates/daemon" }
lycoris-extension  = { path = "crates/extension" }
lycoris-extguest   = { path = "crates/extguest" }
lycoris-membership = { path = "crates/membership" }
lycoris-proto      = { path = "crates/proto" }
lycoris-storage    = { path = "crates/storage" }
lycoris-tls        = { path = "crates/tls" }
