[package]
name = "lycoris-testkit"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

# Dev-only test fixtures; consumed as a dev-dependency, never published.
publish = false

[dependencies]
rcgen.workspace      = true
serde_json.workspace = true
tempfile.workspace   = true
tokio.workspace      = true

[lints]
workspace = true
