[package]
name = "lycoris-api"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
lycoris-config.workspace = true
prost.workspace          = true
rustls.workspace         = true
thiserror.workspace      = true
tokio.workspace          = true
tokio-rustls.workspace   = true
tonic.workspace          = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
