[package]
name = "lycoris-client"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
lycoris-config = { workspace = true }
lycoris-core   = { workspace = true }
lycoris-proto  = { workspace = true }
lycoris-tls    = { workspace = true }
prost.workspace     = true
rustls.workspace    = true
thiserror.workspace = true
tokio.workspace     = true
tonic.workspace     = true

[lints]
workspace = true
