[package]
name = "lycoris-client"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
lycoris-proto  = { workspace = true }
lycoris-tls    = { workspace = true }
thiserror.workspace = true
tonic.workspace     = true

[lints]
workspace = true
