[package]
name = "lycoris-config"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
directories  = { workspace = true }
lycoris-core = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
thiserror    = { workspace = true }
toml         = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
