[package]
name = "lycoris-core"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
directories = { workspace = true }
hex         = { workspace = true }
is-root     = { workspace = true }
ring        = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
