[package]
name = "lycoris-daemon"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
lycoris-client.workspace     = true
lycoris-config.workspace     = true
lycoris-core.workspace       = true
lycoris-membership.workspace = true
lycoris-proto.workspace      = true
lycoris-storage.workspace    = true
lycoris-tls.workspace        = true
thiserror.workspace      = true
tokio.workspace          = true
tonic.workspace          = true
tracing.workspace        = true

[dev-dependencies]
blake3.workspace     = true
rcgen.workspace      = true
rustls.workspace     = true
tempfile.workspace   = true

[lints]
workspace = true
