[package]
name = "lycoris-daemon"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
async-trait.workspace        = true
lycoris-client.workspace     = true
lycoris-config.workspace     = true
lycoris-core.workspace       = true
lycoris-extension.workspace  = true
lycoris-membership.workspace = true
lycoris-proto.workspace      = true
lycoris-storage.workspace    = true
lycoris-tls.workspace        = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tonic.workspace              = true
tracing.workspace            = true

[dev-dependencies]
blake3.workspace   = true
lycoris-testkit    = { path = "../../testkit" }
rustls.workspace   = true
tempfile.workspace = true

[lints]
workspace = true
