[package]
name = "lycoris-extguest"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
# Deliberately `deny`, not the workspace's `forbid`: the lycoris-abi-v1
# boundary is raw linear-memory IO, which is impossible without `unsafe`.
# The few unsafe blocks live in `shim`/`host` behind item-level `allow`s
# with documented invariants; everything else in the crate stays denied.
unsafe_code = "deny"
