[package]
name = "lycoris-membership"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
blake3      = { workspace = true }
lycoris-core = { workspace = true }
thiserror   = { workspace = true }

[lints]
workspace = true
