[package]
name = "lycoris-plugin"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
async-trait = { workspace = true }
blake3      = { workspace = true }
mlua        = { workspace = true }
semver      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
wasmtime    = { workspace = true }

[dev-dependencies]
wat = { workspace = true }

[lints]
workspace = true
