[package]
name = "lycoris-proto"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
