[package]
name = "lycoris-proto"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
lycoris-core.workspace = true
prost.workspace        = true
tonic.workspace        = true
tonic-prost.workspace  = true

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
