[package]
name = "lycoris"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
clap.workspace       = true
owo-colors.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
