[package]
name = "lycoris"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[[bin]]
name = "lycoris"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
lycoris-client.workspace = true
lycoris-config.workspace = true
lycoris-core.workspace   = true
lycoris-daemon.workspace = true
lycoris-proto.workspace  = true
lycoris-tls.workspace    = true
owo-colors.workspace     = true
rustls.workspace         = true
semver.workspace         = true
serde.workspace          = true
serde_json.workspace     = true
thiserror.workspace      = true
tokio.workspace          = true
toml.workspace           = true
tracing.workspace        = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
