[package]
name = "lycoris"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[[bin]]
name = "lycoris"
path = "src/main.rs"

# Prebuilt-binary metadata for `cargo binstall lycoris`: the release
# workflow (.github/workflows/github_release.yml) publishes
# lycoris-<target>.tar.gz (.zip on windows) for the three supported targets
# on every tag, and the tag must equal the workspace version (no "v" prefix)
# for `{ version }` to resolve.
[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }{ archive-suffix }"

# Linux ships a fully static musl binary only; glibc hosts run it as-is.
[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-x86_64-unknown-linux-musl{ archive-suffix }"

# Windows packages are zip archives.
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap                         = { workspace = true, features = ["derive"] }
is-root.workspace            = true
lycoris-client.workspace     = true
lycoris-config.workspace     = true
lycoris-core.workspace       = true
lycoris-daemon.workspace     = true
lycoris-proto.workspace      = true
lycoris-tls.workspace        = true
rustls.workspace             = true
semver.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
service-manager.workspace    = true
thiserror.workspace          = true
tokio.workspace              = true
toml.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
