[package]
name = "lycoris-storage"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
async-trait    = { workspace = true }
blake3         = { workspace = true }
futures-util   = { workspace = true }
jiff           = { workspace = true }
lycoris-config = { workspace = true }
lycoris-core   = { workspace = true }
lancedb        = { workspace = true }
postcard       = { workspace = true }
redb           = { workspace = true }
serde          = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
toml           = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
