[package]
name = "lycoris-tls"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
rcgen     = { workspace = true }
rustls    = { workspace = true }
thiserror = { workspace = true }
tonic     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
