[package]
name = "lycoris-tls"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
lycoris-core = { workspace = true }
rcgen        = { workspace = true }
rustls       = { workspace = true }
thiserror    = { workspace = true }
time         = { workspace = true }
tonic        = { workspace = true }
tracing      = { workspace = true }
x509-parser  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
