[package]
name = "lycoris-ext-openai"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
# cdylib is the registrable wasm artifact (deploy/build-release.sh and the
# wasm e2e tests consume the produced .wasm); rlib keeps the pure core
# reachable from host-side tests. Building this crate for a host target that
# cannot do cdylib (musl) is meaningless — the workspace `default-members`
# keeps it out of such builds.
crate-type = ["cdylib", "rlib"]

[dependencies]
lycoris-extguest = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }

[dev-dependencies]
lycoris-extension = { workspace = true }
lycoris-testkit   = { path = "../../testkit" }
tokio             = { workspace = true }

[lints.rust]
# Same split as lycoris-extguest: deny, not the workspace forbid, so
# the macro-generated ABI shims can carry their documented unsafe blocks.
unsafe_code = "deny"
